ingress/ingress-helloworld.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-helloworld
  namespace: kube-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /helloworld
        backend:
          serviceName: helloworld
          servicePort: 80
