ingress/ingress-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    component: server
    release: prometheus
  name: prometheus-server-ingress
  namespace: monitoring
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    component: server
    release: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus-server-ingress
          servicePort: 9090
      - path: /prometheuspush
        backend:
          serviceName: prometheus-pushgateway
          servicePort: 9091
      - path: /prometheusalert
        backend:
          serviceName: prometheus-alertmanager
          servicePort: 9093
